# StreamBenchmark

./: README.md
plots/: Readme.md  createPlot.sh  createPlotFull.sh  plot.gnp  plotRatio.gnp  style.gnp
streamMPI_sm/: CMakeLists.txt  run
streamMPI_sm/src/: streamMPI_sm.c
streamMPI_sm/src/include/: myMPI.h
streamOpenMP/: CMakeLists.txt  run  runTest.sh
streamOpenMP/src/: streamOpenMP.c  stream_Original.c
